
add_library(dyabieos STATIC  ${PROJECT_SOURCE_DIR}/src/abieos.cpp ${PROJECT_SOURCE_DIR}/src/abi.cpp ${PROJECT_SOURCE_DIR}/src/crypto.cpp ${PROJECT_SOURCE_DIR}/include/eosio/fpconv.c)
target_include_directories(dyabieos PUBLIC ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/external/rapidjson/include)


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH} ${Intl_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_SOURCE_DIR})
set(CMAKE_SWIG_FLAGS "")

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "@loader_path")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE)

SET_SOURCE_FILES_PROPERTIES(abieos.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_LIBRARY(abieospy LANGUAGE python SOURCES abieos.i )
SWIG_LINK_LIBRARIES(abieospy ${PYTHON_LIBRARIES} dyabieos )
